Fix the text more overlaping with the cell description [SCI-7676]

--- a/app/assets/stylesheets/experiments.scss
+++ b/app/assets/stylesheets/experiments.scss
@@ -171,6 +171,7 @@
                 right: 0;
                 text-align: right;
                 width: 25%;
+                min-width: 75px;
               }
             }
 
